[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/player/scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/visuals/arrow.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 35 )

[sub_resource type="CircleShape2D" id=2]
radius = 371.135

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 1, 0.556863, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Player" type="KinematicBody2D" groups=["Player"]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
width = 64.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 2 )
texture_mode = 2

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashTimeout" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
margin_left = -40.0
margin_top = -56.0
margin_right = 40.0
margin_bottom = -40.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 3 )
value = 100.0
percent_visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="DashTimeout" to="." method="_on_DashTimeout_timeout"]
